# scotty-crud

./: .gitignore  BUILDING.md  README.md  scotty-crud.cabal  up.json
core/: crud.cabal
core/Web/: CRUD.hs
crud/: crud.cabal
crud/Data/: CRUD.hs
crud/Web/: CRUD.hs
crud/samples/: example.json
crud/tools/: Compress.hs  Table.hs
examples/: Service.hs  index.html  scotty-crud-examples.cabal  table.html
samples/: s1.json  s2.json
scotty-crud/: LICENSE  scotty-crud.cabal
scotty-crud/Web/CRUD/: Scotty.hs
scotty-crud/Web/Scotty/: CRUD.hs
scotty-crud/example/: Main.hs
src/Web/Scotty/: CRUD.hs
src/Web/Scotty/CRUD/: JSON.hs  Persistant.hs  SQL.hs  Types.hs
src/example/: Main.hs
tests/: Core.hs  LICENSE  Makefile  QC.hs  README.md  crud-tests.cabal  scotty-crud-tests.cabal
tools/: Compress.hs  Main.hs  Table.hs  crud-tools.cabal
