name:                scotty-crud
version:             0.2.0
synopsis:            RESTful CRUD support for scotty
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
Copyright:           Copyright (c) 2014 The University of Kansas
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Scotty.CRUD, 
                       Web.Scotty.CRUD.JSON,
                       Web.Scotty.CRUD.Types
  -- other-modules:       
  other-extensions:    OverloadedStrings, ScopedTypeVariables, TypeFamilies, TypeSynonymInstances, FlexibleInstances
  build-depends:       base >=4.6 && <4.8, aeson >=0.7 && <0.8, attoparsec >=0.11 && <0.12, bytestring >=0.10 && <0.11, unordered-containers >=0.2 && <0.3, text >=1.1 && <1.2, stm >=2.4 && <2.5,
                       scotty == 0.8.*,
                       transformers == 0.4.*,
                       http-types >= 0.8.5,
                       scientific >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-options:  -Wall -fno-warn-orphans -fno-warn-warnings-deprecations  

executable crud
    Build-depends:
         base                   >= 4.6,
         unordered-containers >=0.2 && <0.3,
         containers >=0.5 && <0.6,
         text >=1.1 && <1.2,
         aeson                  >= 0.7 && < 0.8,
         bytestring >=0.10 && <0.11,
         scotty                == 0.8.*,
         transformers  >= 0.3 && <= 0.5,
         scotty-crud == 0.2.0
                  
    Main-is: Main.hs
    Hs-source-dirs:     tools
    default-language:    Haskell2010

Test-Suite test-crud
        type:       exitcode-stdio-1.0
        main-is:            Core.hs
        Hs-source-dirs:     tests
        other-extensions:    OverloadedStrings, ScopedTypeVariables, TypeOperators, TypeFamilies, TypeSynonymInstances, FlexibleInstances, GADTs
        build-depends:       base >=4.6 && <4.8, text >=1.1 && <1.2, directory >=1.2 && <1.3, lens >=4.2 && <4.3, unordered-containers >=0.2 && <0.3, QuickCheck >=2.7 && <2.8, stm >=2.4 && <2.5, aeson >=0.7 && <0.8, vector >=0.10 && <0.11, hashable >=1.2 && <1.3, scientific == 0.3.*,
                 scotty-crud == 0.2.0
        default-language:    Haskell2010    
        