name:                scotty-crud
version:             0.2.0
synopsis:            RESTful CRUD support for scotty
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
Copyright:           Copyright (c) 2014 The University of Kansas
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Scotty.CRUD,
                       Web.Scotty.CRUD.JSON,
                       Web.Scotty.CRUD.SQL,
                       Web.Scotty.CRUD.Types
  -- other-modules:
  other-extensions:    FlexibleInstances,
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeSynonymInstances
  build-depends:       aeson                >= 0.7  && < 0.9,
                       attoparsec           >= 0.11 && < 0.13,
                       base                 >= 4.6  && < 4.8,
                       bytestring           >=0.10  && < 0.11,
                       http-types           >= 0.8.5,
                       scientific           >= 0.3.0,
                       scotty               >= 0.8  && < 0.10,
                       stm                  >= 2.4  && < 2.5,
                       text                 >= 1.1  && < 1.2,
                       transformers         >= 0.3  && < 0.5,
                       unordered-containers >= 0.2  && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fno-warn-warnings-deprecations

executable crud
    build-depends:     aeson                >= 0.7  && < 0.9,
                       base                 >= 4.6,
                       bytestring           >= 0.10 && < 0.11,
                       containers           >= 0.5  && < 0.6,
                       scotty               >= 0.8  && < 0.10,
                       scientific           >= 0.3.0,
                       scotty-crud          == 0.2.0,
                       text                 >= 1.1  && < 1.2,
                       transformers         >= 0.3  && < 0.5,
                       unordered-containers >= 0.2  && < 0.3,
                       wai                  >= 3.0  && < 3.1,
                       wai-extra            >= 3.0  && < 3.1
    main-is:           Main.hs
    hs-source-dirs:    tools
    default-language:  Haskell2010
    ghc-options:       -Wall

Test-Suite test-crud
    type:              exitcode-stdio-1.0
    main-is:           Core.hs
    other-modules:     QC
    hs-source-dirs:    tests
    other-extensions:  FlexibleInstances,
                       GADTs
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeOperators,
                       TypeSynonymInstances
    build-depends:     aeson                >= 0.7  && < 0.9,
                       base                 >= 4.6  && < 4.8,
                       directory            >= 1.2  && < 1.3,
                       QuickCheck           >= 2.7  && < 2.8,
                       scientific           == 0.3.*,
                       scotty-crud          == 0.2.0,
                       text                 >= 1.1  && < 1.2,
                       unordered-containers >= 0.2  && < 0.3,
                       vector               >= 0.10 && < 0.11
    default-language:  Haskell2010
    ghc-options:       -Wall -fno-warn-orphans
