name:                scotty-crud
version:             0.4.0
synopsis:            RESTful CRUD support for scotty
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
Copyright:           Copyright (c) 2015 The University of Kansas
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Scotty.CRUD
  -- other-modules:
  other-extensions:    FlexibleInstances,
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeSynonymInstances
  build-depends:       aeson                >= 0.9 && <= 1.2,
                       base                 >= 4.7  && < 5.0,
                       http-types           == 0.9.*,
                       natural-transformation >= 0.4 && < 0.5,
                       scotty               >= 0.10 && <= 0.12,
                       text                 == 1.2.*,
                       transformers         >= 0.4 && <= 0.6,
                       unordered-containers == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  Ghc-options:         -Wall

