name:                scotty-crud-examples
version:             0.1.0.0
synopsis:            Example of RESTful CRUD support for scotty
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
Copyright:           Copyright (c) 2014 The University of Kansas
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable scotty-crud-service-example
    Build-depends:
         aeson                  >= 0.7 && < 0.9,
         base                   >= 4.6,
         text                   == 1.1.*,
         scotty                 == 0.8.*,
         scotty-crud            == 0.2.*,
         transformers           >= 0.3 && < 0.5,
         unordered-containers   == 0.2.*

                  
    Main-is: Service.hs
    Hs-Source-Dirs: .
    default-language:    Haskell2010
    ghc-options:         -Wall