name:                scotty-crud
version:             0.1.0.0
synopsis:            RESTful CRUD support for scotty
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.CRUD.Scotty
  -- other-modules:       
  other-extensions:    OverloadedStrings, ScopedTypeVariables, TypeFamilies, TypeSynonymInstances, FlexibleInstances
  build-depends:       base >=4.7 && <4.8, aeson >=0.7 && <0.8, attoparsec >=0.11 && <0.12, bytestring >=0.10 && <0.11, unordered-containers >=0.2 && <0.3, text >=1.1 && <1.2, stm >=2.4 && <2.5,
                       scotty == 0.7.*,
                       crud == 0.1.*
  -- hs-source-dirs:      
  default-language:    Haskell2010