name:                crud-tests
version:             0.1.0
synopsis:            tests for crud
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
copyright:           (c)2014 The University of Kansas
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable crud-tests
  main-is:             Core.hs
  other-extensions:    OverloadedStrings, ScopedTypeVariables, TypeOperators, TypeFamilies, TypeSynonymInstances, FlexibleInstances, GADTs
  build-depends:       base >=4.6 && <4.8, text >=1.1 && <1.2, directory >=1.2 && <1.3, lens >=4.2 && <4.3, unordered-containers >=0.2 && <0.3, QuickCheck >=2.7 && <2.8, stm >=2.4 && <2.5, aeson >=0.7 && <0.8, vector >=0.10 && <0.11, hashable >=1.2 && <1.3, scientific == 0.3.*, 
                       scotty-crud == 0.1.0.0
  -- hs-source-dirs:      
  default-language:    Haskell2010