name:                scotty-crud-tests
version:             0.1.0
synopsis:            tests for crud
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
copyright:           (c)2014 The University of Kansas
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable crud-tests
  main-is:             Core.hs
  other-extensions:    FlexibleInstances,
                       GADTs,
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeOperators,
                       TypeSynonymInstances
  build-depends:       aeson                >= 0.7  && < 0.9,
                       base                 >= 4.6  && < 4.8,
                       directory            >= 1.2  && < 1.3,
                       hashable             >= 1.2  && < 1.3,
                       lens                 >= 4.2  && < 4.4,
                       QuickCheck           >= 2.7  && < 2.8,
                       scientific           == 0.3.*,
                       scotty-crud          == 0.2.0,
                       stm                  >= 2.4  && < 2.5,
                       text                 >= 1.1  && < 1.2,
                       vector               >= 0.10 && < 0.11,
                       unordered-containers >= 0.2  && < 0.3
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans