
name:                scotty-crud-tools
version:             0.1.0
synopsis:            CRUD object support
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
Copyright:           Copyright (c) 2014 The University of Kansas
category:            Web
build-type:          Simple
cabal-version:       >=1.10
  
executable crud
    BuilD-depends:
         base                   >= 4.6,
         unordered-containers >=0.2 && <0.3,
         containers >=0.5 && <0.6,
         text >=1.1 && <1.2,
         aeson                  >= 0.7 && < 0.8,
         bytestring >=0.10 && <0.11,
         scotty-crud           == 0.1.*
                  
    Main-is: Main.hs
    default-language:    Haskell2010
  